--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "prisma:studio": "prisma studio"
   },
   "dependencies": {
-    "@prisma/client": "^6.10.1",
+    "@prisma/client": "^6.11.1",
+    "bcryptjs": "^3.0.2",
     "cors": "^2.8.5",
     "dotenv": "^16.6.1",
     "express": "^4.21.2",
@@ -21,6 +22,7 @@
     "firebase": "^11.9.1",
     "firebase-admin": "^12.7.0",
     "helmet": "^7.2.0",
+    "jsonwebtoken": "^9.0.2",
     "moment": "^2.30.1",
     "morgan": "^1.10.0",
     "node-cron": "^3.0.3"
